--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.rodneygeerlings.myflightinfo">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.rodneygeerlings.myflightinfo.activities.FlightActivity" />
+        <activity android:name="com.rodneygeerlings.myflightinfo.activities.ContactActivity" />
+        <activity android:name="com.rodneygeerlings.myflightinfo.activities.WeatherActivity"></activity>
     </application>
 
 </manifest>
