--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.rodneygeerlings.myflightinfo">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -21,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.rodneygeerlings.myflightinfo.activities.FlightActivity" />
+        <activity android:name="com.rodneygeerlings.myflightinfo.activities.FlightDetailActivity" />
         <activity android:name="com.rodneygeerlings.myflightinfo.activities.ContactActivity" />
         <activity android:name="com.rodneygeerlings.myflightinfo.activities.WeatherActivity"></activity>
     </application>
