--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ freeline_project_description.json
 
 # App secrets (like API-keys)
 app/src/main/res/values/secrets.xml
+.idea/caches/build_file_checksums.ser
